--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
     --back: rgba(242, 239, 235, 1);
     --orange: rgba(255, 153, 0, 1);
     --gray: rgba(242, 239, 235, 1);
+    --gray-dark: rgba(204, 203, 201, 1);
+
 }
 
 @font-face {
@@ -17,6 +19,10 @@ html {
 * {
     margin: 0px;
     padding: 0px;
+}
+
+input:focus, textarea:focus, select:focus{
+    outline: none;
 }
 
 a {
@@ -88,7 +94,7 @@ body {
     letter-spacing: 0.2px;
 }
 
-.lets-go {
+button {
     width: 375px;
     height: 55px;
     border: none;
@@ -98,15 +104,89 @@ body {
     font-size: 18px;
     font-family: 'Sedan';
     color: var(--gray);
-    transition: 0.5s;
+    transition: all 0.3s ease-in-out;
 }
 
 .lets-go i{
     font-size: 16px;
 }
 
-.lets-go:hover  {
-    background: var(--gray);
-    color: var(--dark);
+button:hover  {
     border: 3px solid var(--orange);
+    background: transparent;
+    color: var(--dark);
+    cursor: pointer;
 }
+
+.form-container {
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.form-heading {
+    margin-bottom: 42px;
+    font-weight: 400;
+    font-size: 32px;
+    color: var(--dark);
+}
+
+.form-container form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    font-family: 'Sedan';
+}
+
+.form-container form label {
+    align-self: flex-start;
+    font-weight: 400;
+    font-size: 18px;
+    margin-bottom: 2px;
+    color: var(--dark);
+}
+
+.form-container form input,select {
+    margin-bottom: 20px;
+    width: 100%;
+    height: 50px;
+    border-radius: 15px;
+    border: none;
+    background: var(--gray-dark);
+    padding: 0px 20px;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    font-family: 'Sedan';
+    font-size: 16px;
+    color: rgba(44, 44, 44, 0.7);
+}
+
+.form-container form input::placeholder,select {
+    font-size: 16px;
+    font-weight: 400;
+    font-family: 'Sedan';
+    color: rgba(44, 44, 44, 0.7);
+}
+
+.form-container form select option {
+    font-size: 16px;
+    font-weight: 400;
+    font-family: 'Sedan';
+    color: var(--dark);
+}
+
+.form-container form select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
+    appearance: none;
+    background-repeat: no-repeat;
+    background-image: url(./assets/down.svg);
+    background-position: right 20px top 15px;
+    background-size: 15px;
+}
+
