--- a/style.css
+++ b/style.css
@@ -190,3 +190,111 @@ button:hover  {
     background-size: 15px;
 }
 
+#form-submit {
+    width: 100%;
+    margin-top: 50px;
+    height: 55px;
+}
+
+.quiz-container {
+    width: 70%;
+    color: var(--dark);
+    font-family: 'Sedan';
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.question {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+#question-number {
+    font-weight: 400;
+    font-size: 26px;
+    margin-bottom: 10px;
+}
+
+.question-text {
+    font-weight: 400;
+    font-size: 22px;
+    margin-bottom: 20px;
+}
+.quiz-option {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 10px;
+    margin-left: 15px;
+}
+
+.quiz-option input{
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    margin: 0;
+    background: rgba(204, 203, 201, 1);
+    border: none;
+    border-radius: 50%;
+}
+
+.quiz-option input:checked {
+    background: var(--orange);
+}
+
+.quiz-option label {
+    font-weight: 400;
+    font-size: 22px;
+    margin-left: 20px;
+}
+
+.quiz-handler {
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    align-self: flex-end;
+    align-items: center;
+}
+
+.time-left {
+    margin-bottom: 15px;
+    font-weight: 400;
+    font-size: 26px;
+    letter-spacing: 1%;
+}
+
+#quiz-line hr{
+    width: 150px;
+}
+
+.quiz-buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+.quiz-buttons button {
+    height: 55px;
+    width: 150px;
+    margin: 0px 10px;
+    letter-spacing: 10%;
+}
+
+.score-container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.score-container h2 {
+    text-align: center;
+    font-weight: 400;
+    font-size: 48px;
+    letter-spacing: 1%;
+    margin-bottom: 70px;
+}
