--- a/style.css
+++ b/style.css
@@ -212,7 +212,7 @@ button:hover  {
     margin-bottom: 20px;
 }
 
-#question-number {
+.uestion-number {
     font-weight: 400;
     font-size: 26px;
     margin-bottom: 10px;
